Templates/iis-2vm-sql-1vm/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "username": {
      "type": "string",
      "metadata": {
        "description": "SQL IaaS VM local administrator username"
      }
    },
    "password": {
      "type": "securestring",
      "metadata": {
        "description": "SQL IaaS VM local administrator password"
      }
    },
    "numberOfWebSrvs": {
      "type": "int",
      "metadata": {
        "description": "Number of Web Servers"
      },
      "allowedValues": [
        1,
        2
      ],
      "defaultValue": 1
    },
    "uniquePrefix":{
      "type": "string",
      "metadata": {
        "description": "Prefix for uniqueness"
      }
    },
    "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "The base URI where artifacts required by this template are located."
      }
    },
    "_artifactsLocationSasToken": {
      "type": "securestring",
      "metadata": {
        "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated."
      }
    }
  },
  "variables": {
    "apiVersion": "2015-06-15",
    "storageName": "[concat('fab', 'stg', uniqueString(resourceGroup().id))]",
    "vhdContainer": "vhds",
    "virtualNetworkName": "[concat(parameters('uniquePrefix'), 'Vnet')]",
    "addressPrefix": "10.0.0.0/16",
    "feSubnetPrefix": "10.0.0.0/24",
    "dbSubnetPrefix": "10.0.2.0/24",
    "feNSGName": "feNsg",
    "dbNSGName": "dbNsg",
    "sqlSrvDBName": "[concat('fab', 'sqlSrv14')]",
    "sqlVmSize": "['Standard_DS3_v2']",
    "sqlSrvDBOsDiskName": "[concat('db',parameters('uniquePrefix'), 'DBSrvOS')]",
    "sqlSrvDBDataDiskName": "[concat('db',parameters('uniquePrefix'), 'DBSrvData')]",
    "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
    "sqlSrvDBNicName": "[concat('db',variables('sqlSrvDBName'), 'Nic')]",
    "sqlSvrDBSubnetRef": "[concat(variables('vnetId'), '/subnets/', 'DBSubnetName')]",
    "sqlPublicIP": "[concat('db', 'SqlPip')]",
    "sqlPublicIPRef": "[resourceId('Microsoft.Network/publicIPAddresses', variables('sqlPublicIP'))]",
    "sqlImagePublisher": "MicrosoftSQLServer",
    "sqlImageOffer": "SQL2014SP2-WS2012R2",
    "sqlImageSku": "Standard",
    "webSrvName": "[concat('fab', 'webSrv')]",
    "webSrvVMSize": "['Standard_DS2_v2']",
    "webSrvOSDiks": "[concat('fab', 'WebSrvOS')]",
    "webSrvNicName": "[concat(variables('webSrvName'), 'Nic')]",
    "webSrvSubnetRef": "[concat(variables('vnetId'), '/subnets/', 'FESubnetName')]",
    "webSrvPublicIP": "[concat('fab', 'websrvpip')]",
    "webSrvAvailabilitySetName": "[concat('fe', 'webSrvAS')]",
    "webSrvNumbOfInstances": "[parameters('numberOfWebSrvs')]",
    "webSrvDnsNameforLBIP": "[concat(toLower(resourceGroup().name),'lb')]",
    "webLbName": "[concat(variables('webSrvName'), 'lb')]",
    "webLblbID": "[resourceId('Microsoft.Network/loadBalancers',variables('webLbName'))]",
    "webLblb_PIP_Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('webSrvPublicIP'))]",
    "webLbId": "[resourceId('Microsoft.Network/loadBalancers',variables('webLbName'))]",
    "frontEndIPConfigID": "[concat(variables('webLbId'),'/frontendIPConfigurations/LoadBalancerFrontEnd')]",
    "lbPoolID": "[concat(variables('webLbId'),'/backendAddressPools/BackendPool1')]",
    "lbProbeID": "[concat(variables('webLbId'),'/probes/tcpProbe')]",
    "vmExtensionName": "dscExtension",
    "modulesUrl":"[concat(parameters('_artifactsLocation'),'/scripts/WebServerConfig.ps1.zip',parameters('_artifactsLocationSasToken'))]",    
    "configurationFunction": "WebServerConfig.ps1\\WebServerConfig"
  },
  "resources": [
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('feNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "FrontEndNSG"
      },
      "properties": {
        "securityRules": [
          {
            "name": "rdp_rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "web_rule",
            "properties": {
              "description": "Allow WEB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "[variables('apiVersion')]",
      "name": "[variables('dbNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "BackEndNSG"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow_FE",
            "properties": {
              "description": "Allow FE Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "10.0.0.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "rdp_rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_FE",
            "properties": {
              "description": "Block App Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "10.0.0.0/24",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 121,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_Internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('feNSGName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('dbNSGName'))]"
      ],
      "tags": {
        "displayName": "VirtualNetwork"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "FESubnetName",
            "properties": {
              "addressPrefix": "[variables('feSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('feNSGName'))]"
              }
            }
          },
          {
            "name": "DBSubnetName",
            "properties": {
              "addressPrefix": "[variables('dbSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbNSGName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('storageName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "dependsOn": [ ],
      "tags": {
        "displayName": "StorageForEnv"
      },
      "properties": {
        "accountType": "Premium_LRS"
      }
    },
    {
      "name": "[variables('sqlPublicIP')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "tags": {
        "displayName": "SqlPIP"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "name": "[variables('sqlSrvDBNicName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "tags": {
        "displayName": "SQLSrvDBNic"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('sqlSvrDBSubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[variables('sqlPublicIPRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[concat('be', 'sqlSrv14')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('sqlSrvDBNicName'))]",
        "[concat('Microsoft.Network/publicIPAddresses/', variables('sqlPublicIP'))]"
      ],
      "tags": {
        "displayName": "SQL-Svr-DB"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('sqlVmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('sqlSrvDBName')]",
          "adminUsername": "[parameters('username')]",
          "adminPassword": "[parameters('password')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('sqlImagePublisher')]",
            "offer": "[variables('sqlImageOffer')]",
            "sku": "[variables('sqlImageSku')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "SQL-Svr-DBOSDisk",
            "vhd": {
              "uri": "[concat('http://', variables('storageName'), '.blob.core.windows.net/', variables('vhdContainer'), '/', variables('sqlSrvDBOsDiskName'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },

        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('sqlSrvDBNicName'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('webSrvAvailabilitySetName')]",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "WebSrvAvailabilitySet"
      },
      "properties": { }
    },
    {
      "name": "[variables('webSrvPublicIP')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "tags": {
        "displayName": "WebSrvPIP for LB"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "dnsSettings": {
          "domainNameLabel": "[variables('webSrvDnsNameforLBIP')]"
        }
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "name": "[variables('webLbName')]",
      "type": "Microsoft.Network/loadBalancers",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Web LB"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('webSrvPublicIP'))]"
      ],
      "properties": {
        "frontendIPConfigurations": [
          {
            "name": "LoadBalancerFrontEnd",
            "properties": {
              "publicIPAddress": {
                "id": "[variables('webLblb_PIP_Id')]"
              }
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "BackendPool1"
          }
        ],
        "inboundNatRules": [
          {
            "name": "RDP-VM0",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[variables('frontEndIPConfigID')]"
              },
              "protocol": "tcp",
              "frontendPort": 50001,
              "backendPort": 3389,
              "enableFloatingIP": false
            }
          },
          {
            "name": "RDP-VM1",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[variables('frontEndIPConfigID')]"
              },
              "protocol": "tcp",
              "frontendPort": 50002,
              "backendPort": 3389,
              "enableFloatingIP": false
            }
          }
        ],
        "loadBalancingRules": [
          {
            "name": "LBRule",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[variables('frontEndIPConfigID')]"
              },
              "backendAddressPool": {
                "id": "[variables('lbPoolID')]"
              },
              "protocol": "tcp",
              "frontendPort": 80,
              "backendPort": 80,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 5,
              "probe": {
                "id": "[variables('lbProbeID')]"
              }
            }
          }
        ],
        "probes": [
          {
            "name": "tcpProbe",
            "properties": {
              "protocol": "tcp",
              "port": 80,
              "intervalInSeconds": 5,
              "numberOfProbes": 2
            }
          }
        ]
      }
    },
    {
      "name": "[concat(variables('webSrvNicName'), copyindex())]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "copy": {
        "name": "nicLoop",
        "count": "[variables('webSrvNumbOfInstances')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/loadBalancers/', variables('webLbName'))]"
      ],
      "tags": {
        "displayName": "WebSrvNic"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('webSrvSubnetRef')]"
              },
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[concat(variables('webLbId'), '/backendAddressPools/BackendPool1')]"
                }
              ],
              "loadBalancerInboundNatRules": [
                {
                  "id": "[concat(variables('webLbId'),'/inboundNatRules/RDP-VM', copyindex())]"
                }
              ]

            }
          }
        ]
      }
    },
    {
      "name": "[concat(variables('webSrvName'), copyindex())]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[resourceGroup().location]",
      "apiVersion": "[variables('apiVersion')]",
      "copy": {
        "name": "webSrvMachineLoop",
        "count": "[variables('webSrvNumbOfInstances')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('webSrvNicName'), copyindex())]",
        "[concat('Microsoft.Compute/availabilitySets/', variables('webSrvAvailabilitySetName'))]"
      ],
      "tags": {
        "displayName": "WebSrv"
      },
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('webSrvAvailabilitySetName'))]"
        },
        "hardwareProfile": {
          "vmSize": "[variables('webSrvVMSize')]"
        },
        "osProfile": {
          "computerName": "[concat(variables('webSrvName'),copyindex())]",
          "adminUsername": "[parameters('username')]",
          "adminPassword": "[parameters('password')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2012-R2-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "name": "WebSvrOSDisk",
            "vhd": {
              "uri": "[concat('http://', variables('storageName'), '.blob.core.windows.net/', variables('vhdContainer'), '/', variables('webSrvOSDiks'), copyindex(), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('webSrvNicName'), copyindex()))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('webSrvName'), copyindex(),'/', variables('vmExtensionName'))]",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "copy": {
        "name": "webSrvMachineLoop",
        "count": "[variables('webSrvNumbOfInstances')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', variables('webSrvName'), copyindex())]"
      ],
      "tags": {
        "displayName": "VM Extensions"
      },
      "properties": {
        "publisher": "Microsoft.Powershell",
        "type": "DSC",
        "typeHandlerVersion": "2.19",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "ModulesUrl": "[variables('modulesUrl')]",
          "SasToken": "",
          "ConfigurationFunction": "[variables('configurationFunction')]",
          "wmfVersion": "4.0",
          "Properties": {
          }
        },
        "protectedSettings": { }
      }
    }
  ]
}
